--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,26 @@
 body{
-  text-align:center;
+  text-align:justify;
   font-family:open sans, sans-serif;
-  background-color:#8a71c9;
+  background-color:#3b3842;
   color:#ffffff;
   margin: 0px 0px 30px 0px;
   
 }
 
+
 h2{
-  color:#2a0074;
+  color:#f1eff5;
   font-size: 40px;
 }
 
 h1{
+  text-align:center;
   font-size: 60px;
   font-weight: 300;
 }
 
 h3{
+  text-align:center;
   font-size:22px;
   font-style: italic;
 }
@@ -31,15 +34,15 @@ img{
 }
 
 .titulo-verde{
-  color: #04ff9f;
+  color: #daa520;
 }
 
 .titulo-vermelho{
-  color: #FF9E9E;
+  color: #daa520;
 }
 
 .titulo-amarelo{
-  color:#ffe36d;
+  color: #daa520;
 }
 section{
   width: 60%;
@@ -50,19 +53,20 @@ section section{
 }
 
 ul{
+  text-align:center;
   list-style-type:none;
    line-height: 2;
   padding-left:0;
 }
 
 a{
-  color:#99ffff;
+  color:#ecf7f7;
   font-weight: 700;
   text-decoration:none;
 }
 
 .principal{
-  background-color:  #FF6CB5;
+  background-color:  rgb(25, 92, 12);
   height:40px;
   max-width:60%;
   margin:0 auto;
@@ -82,6 +86,22 @@ a{
   margin: 0 auto;
 }
 
+.coluna{
+  float: left;
+  width: 33.33%;
+
+.linguagem: {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+@media screen and (max-width: 500px) {
+  .column {
+    width: 100%;
+  }
+}
+
 button {
   background-color:#41f341;
   border: 1px solid transparent;
@@ -90,5 +110,5 @@ button {
 }
 
 a:hover {
-  color: #FF00FF;
+  color: #2a0074;
   }
